Added initial files
index.html, style.css, images and font files added

--- a/index.html
+++ b/index.html
@@ -2,10 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>ROAMEU/Home</title>
 </head>
 <body>
-<p>Hello World</p>
-<p>Hello World2</p>
+    <div class="header" >
+        <div class = "name-h">
+            <h1>ROAM EU</h1>
+        </div>
+        <div class = "nav-bar">
+            <a href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="#countries">Countries</a>
+             <ul>
+                <li>France</li>
+                <li>Italy</li>
+                <li>Spain</li>  
+                <li>Portugal</li>
+                <li>Greece</li>
+             </ul>
+            <a href="#contact">Contact</a>
+        </div>
+    
+   </div>
+    <div class="top-section">
+       <div class = "intro-text">
+        <h2>Welcome to ROAM EU</h2>
+        <p>Your gateway to exploring Europe</p>
+       </div> 
+        <img src="/img/top_image.jpeg" alt="Travel in Europe" />
+    </div>
+    <div class = "about-section" id="about">
+        <h2>About Us</h2>
+        <p>ROAM EU is dedicated to helping travelers explore the rich culture,
+             history, and beauty of Europe.
+              Whether you're looking for hidden gems or popular destinations,
+             we've got you covered.</p>
+    </div>
+    <div class = "countries-section">
+        <h2>Popular Countries to Visit</h2>
+        <img src="https://i.pinimg.com/736x/0b/fb/ea/0bfbead573fe7afba09f566c6211eefd.jpg" alt="EU Map" />
+    </div>
+    <footer>
+        <p>&copy; 2024 ROAM EU. All rights reserved.</p>
+        <div class="links">
+            <a href="#privacy">Privacy Policy</a> |
+            <a href="#terms">Terms of Service</a> |
+            <a href="#contact">Contact Us</a>
+        </div>
+    </footer>
 </body>
 </html>
