--- a/countries.html
+++ b/countries.html
@@ -6,10 +6,10 @@
     <script src="js/keep-params.js"></script>
 </head>
 <body>
-<a href="countries/france.html">countries/france.html</a>
-<a href="countries/spain.html">countries/spain.html</a>
-<a href="countries/italy.html">countries/italy.html</a>
-<a href="countries/greece.html">countries/greece.html</a>
+<a href="countries/france.html">countries/france.html</a><br>
+<a href="countries/spain.html">countries/spain.html</a><br>
+<a href="countries/italy.html">countries/italy.html</a><br>
+<a href="countries/greece.html">countries/greece.html</a><br>
 <a href="countries/portugal.html">countries/portugal.html</a>
 </body>
 </html>
