Fix image source and improve HTML structure
Updated image source in the top section and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Welcome to ROAM EU</h2>
         <p>Your gateway to exploring Europe</p>
     </div>
-    <img src="/img/top_image.jpeg" alt="Travel in Europe"/>
+    <img src="/img/top_section.webp" alt="Travel in Europe"/>
 </div>
 <div class="about-section" id="about">
     <h2>About Us</h2>
@@ -53,4 +53,5 @@
     </div>
 </footer>
 </body>
+
 </html>
