few changes in html and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-bar">
         <a href="#">Home</a>
         <a href="#about">About</a>
-        <a href="countries.html">Countries</a>
+        <a class="drop-down">Countries</a>
         <ul>
             <li>France</li>
             <li>Italy</li>
@@ -31,7 +31,7 @@
         <h2>Welcome to ROAM EU</h2>
         <p>Your gateway to exploring Europe</p>
     </div>
-    <img src="/img/top_section.webp" alt="Travel in Europe"/>
+    <img src="img/top_section.webp" alt="Travel in Europe"/>
 </div>
 <div class="about-section" id="about">
     <h2>About Us</h2>
