Updated the About section content

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 </div>
 <div class="about-section" id="about">
     <h2>About Us</h2>
-    <p>ROAM EU is dedicated to helping travelers explore the rich culture,
-        history, and beauty of Europe.
-        Whether you're looking for hidden gems or popular destinations,
-        we've got you covered.</p>
+    <p>Welcome to Roam EU!
+We are dedicated to helping travelers explore the rich culture, history, and beauty of Europe. Whether you are looking for hidden gems or popular destinations, we have you covered.
+At Roam EU, we understand the desire for authentic and memorable travel experiences. Our team is passionate about crafting itineraries that highlight the very best of the continent's most captivating countries. We are specialists in few select Western European destinations, offering expert knowledge and tailored journeys through France, Spain, Italy, Portugal, and Germany.
+From the sun-drenched coasts of the Iberian Peninsula to the historical landmarks of Central Europe, our goal is to help you discover the landscapes, cuisines, and stories that make each of these nations unique.
+Discover the effortless way to explore Europe with Roam EU. Let us guide you on your next great adventure. </p>
 </div>
 <div class="countries-section">
     <h2>Popular Countries to Visit</h2>
