change the header for country selection

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ From the sun-drenched coasts of the Iberian Peninsula to the historical landmark
 Discover the effortless way to explore Europe with Roam EU. Let us guide you on your next great adventure. </p>
 </div>
 <div class="countries-section">
-    <h2>Popular Countries to Visit</h2>
+    <h2>Choose Your Destination</h2>
     <img src="https://i.pinimg.com/736x/0b/fb/ea/0bfbead573fe7afba09f566c6211eefd.jpg" alt="EU Map"/>
 </div>
 <footer>
-    <p>&copy; 2024 ROAM EU. All rights reserved.</p>
+    <p>&copy; 2025 ROAM EU. All rights reserved.</p>
     <div class="links">
         <a href="#privacy">Privacy Policy</a> |
         <a href="#terms">Terms of Service</a> |
