created js file and added script tag in html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Discover the effortless way to explore Europe with Roam EU. Let us guide you on 
         <a href="#contact">Contact Us</a>
     </div>
 </footer>
+<script src = "./js/script.js"></script>
 </body>
 
 </html>
