added all the SVGs in the html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Italy</li>
             <li>Spain</li>
             <li>Portugal</li>
-            <li>Greece</li>
+            <li>Germany</li>
         </ul>
         <a href="#contact">Contact</a>
     </div>
@@ -43,7 +43,28 @@ Discover the effortless way to explore Europe with Roam EU. Let us guide you on 
 </div>
 <div class="countries-section">
     <h2>Choose Your Destination</h2>
-    <img src="https://i.pinimg.com/736x/0b/fb/ea/0bfbead573fe7afba09f566c6211eefd.jpg" alt="EU Map"/>
+    <div class="carousel">
+        <div class="carousel-item">
+            <img src="./SVGs/franceSvg.svg" alt="France">
+            <h3>France</h3>
+        </div>
+        <div class="carousel-item">
+            <img src="./SVGs/italySvg.svg" alt="Italy">
+            <h3>Italy</h3>
+        </div>
+        <div class="carousel-item">
+            <img src="./SVGs/spainSvg.svg" alt="Spain">
+            <h3>Spain</h3>
+        </div>
+        <div class="carousel-item">
+            <img src="./SVGs/portugalSvg.svg" alt="Portugal">
+            <h3>Portugal</h3>
+        </div>
+        <div class="carousel-item">
+            <img src="./SVGs/germanSvg.svg" alt="Greece">
+            <h3>Germany</h3>
+        </div>
+    </div>
 </div>
 <footer>
     <p>&copy; 2025 ROAM EU. All rights reserved.</p>
