worked on carousel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Discover the effortless way to explore Europe with Roam EU. Let us guide you on 
             <img src="./SVGs/italySvg.svg" alt="Italy">
             <h3>Italy</h3>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item main-item">
             <img src="./SVGs/spainSvg.svg" alt="Spain">
             <h3>Spain</h3>
         </div>
