--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ Discover the effortless way to explore Europe with Roam EU. Let us guide you on 
     <h2>Choose Your Destination</h2>
     <div class="carousel">
         <div class="carousel-item">
-            <img src="./SVGs/franceSvg.svg" alt="France">
+            <img src="./SVGs/France 2.svg" alt="France">
             <h3>France</h3>
         </div>
         <div class="carousel-item">
-            <img src="./SVGs/italySvg.svg" alt="Italy">
+            <img src="./SVGs/italy 2.svg" alt="Italy">
             <h3>Italy</h3>
         </div>
         <div class="carousel-item main-item">
