added the drop down menu feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#">Home</a>
         <a href="#about">About</a>
         <a class="drop-down">Countries</a>
-        <ul>
+        <ul class="dropdown-menu">
             <li>France</li>
             <li>Italy</li>
             <li>Spain</li>
