update france (jesse)

--- a/countries/france.html
+++ b/countries/france.html
@@ -1,47 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>France</title>
     <script src="../js/keep-params.js"></script>
-    <link rel="stylesheet" href="../css/countries.css">
-</head>
-<body>
-<a href="../countries.html"><- back</a>
-<hr>
-<br>
-<div id="inner">
-    <h1>Summary</h1>
-    <p>France is one of the world's most visited countries, famous for its rich history, art, cuisine, fashion, and
-        landscapes. From the romance of Paris to the vineyards of Bordeaux, the beaches of the French Riviera, and the
-        Alpine peaks, France offers a mix of culture, relaxation, and adventure.
+    <link rel="stylesheet" href="../css/countries.css" />
+  </head>
 
-        The capital of France is Paris and the spoken language is French, however English is also widely spoken in
-        tourist areas. The best time to visit is during summer/autumn when the weather is pleasant with fewer crowds.
-    </p>
-    <br>
-    <h1>Top 5 Things to Do</h1>
-    <ol>
-        <li>Explore Paris - The City of Light</li>
-        <li>Visit the French Riviera (Côte d'Azur)</li>
-        <li>Discover the Loire Valley Châteaux</li>
-        <li>Tour the Wine Regions</li>
-        <li>Experience Provence</li>
-    </ol>
-    <br>
-    <h1>Getting around</h1>
-    <h2>Transport</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum</p>
-    <h2>Safety</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum</p>
-</div>
-</body>
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+
+      font-family: Arial, sans-serif;
+
+      min-width: 100dvw;
+      min-height: 100dvh;
+    "
+  >
+    <div
+      style="
+        background-image: url(../img/810566.jpg);
+        filter: blur(4px);
+        -webkit-filter: blur(4px);
+        box-shadow: 0 0 50px 50px black;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+      "
+    ></div>
+    <div
+      style="
+        display: grid;
+        grid-template-columns: auto 64rem auto;
+        min-height: 100vh;
+      "
+    >
+      <div></div>
+      <div style="max-width: 100vw; background-color: white">
+        <div style="padding: 1rem">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/en/c/c3/Flag_of_France.svg"
+            style="width: 16rem; float: left; padding: 1rem"
+          />
+          <h1>Summary</h1>
+          <p>
+            France is one of the world's most visited countries, famous for its
+            rich history, art, cuisine, fashion, and landscapes. From the
+            romance of Paris to the vineyards of Bordeaux, the beaches of the
+            French Riviera, and the Alpine peaks, France offers a mix of
+            culture, relaxation, and adventure. The capital of France is Paris
+            and the spoken language is French, however English is also widely
+            spoken in tourist areas. The best time to visit is during
+            summer/autumn when the weather is pleasant with fewer crowds.
+          </p>
+          <br />
+          <h1>Top 5 Things to Do</h1>
+          <ol>
+            <li>Explore Paris - The City of Light</li>
+            <li>Visit the French Riviera (Côte d'Azur)</li>
+            <li>Discover the Loire Valley Châteaux</li>
+            <li>Tour the Wine Regions</li>
+            <li>Experience Provence</li>
+          </ol>
+          <br />
+          <h1>Getting around</h1>
+          <h2>Transport</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum
+          </p>
+          <h2>Safety</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum
+          </p>
+        </div>
+      </div>
+      <div></div>
+    </div>
+  </body>
 </html>
