--- a/contactUs/contactUs.html
+++ b/contactUs/contactUs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
      <!-- link to css file -->
-    <link rel="stylesheet" href="styleAbout.css">
+    <link rel="stylesheet" href="../css/contactUs.css">
 </head>
 <body>
 
@@ -67,3 +67,4 @@ document.getElementById("contactForm").addEventListener("submit", function(e) {
 
 </body>
 </html>
+
