--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="links">
         <a href="#privacy">Privacy Policy</a> |
         <a href="#terms">Terms of Service</a> |
-        <a href="#contact">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
       </div>
     </footer>
     <script src="./js/script.js"></script>
