--- a/countries/france.html
+++ b/countries/france.html
@@ -31,23 +31,19 @@
 				<h1>Getting around</h1>
 				<h2>Transport</h2>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in
-					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-					culpa qui officia deserunt mollit anim id est laborum
+					France has an excellent transportation network, making it easy to move between cities and regions.
+					High-speed TGV trains connect major hubs quickly and comfortably, while regional trains and buses
+					reach smaller towns. In cities, public transit is reliable, Paris offers an extensive metro, RER,
+					buses, and trams. For rural areas like Provence or the Loire Valley, renting a car gives the most
+					flexibility. Domestic flights are available but often unnecessary thanks to efficient rail service.
 				</p>
 				<h2>Safety</h2>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in
-					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-					culpa qui officia deserunt mollit anim id est laborum
+					France is generally safe for travelers. Petty theft, especially in crowded areas, train stations,
+					and major attractions—can happen, so keep valuables secure and stay aware of your surroundings. At
+					night, well-lit central areas are safe to navigate, though it’s wise to avoid isolated spots. Follow
+					local guidance during demonstrations or strikes, which occur occasionally and may affect transport
+					schedules.
 				</p>
 			</div>
 		</div>
