French National Anthem

--- a/countries/france.html
+++ b/countries/france.html
@@ -16,6 +16,9 @@
 		<div class="main-div-outer">
 			<div class="main-div-inner">
 				<img src="../img/flag_of_france.svg" class="flag" />
+				<audio controls>
+					<source src="../audio/La_Marseillaise.ogg"> Your browser does not support the audio element.
+				</audio>
 				<h1>Summary</h1>
 				<p>
 					France is one of the world's most visited countries, famous for its
@@ -31,19 +34,20 @@
 				<h1>Getting around</h1>
 				<h2>Transport</h2>
 				<p>
-					France has an excellent transportation network, making it easy to move between cities and regions.
-					High-speed TGV trains connect major hubs quickly and comfortably, while regional trains and buses
-					reach smaller towns. In cities, public transit is reliable, Paris offers an extensive metro, RER,
-					buses, and trams. For rural areas like Provence or the Loire Valley, renting a car gives the most
-					flexibility. Domestic flights are available but often unnecessary thanks to efficient rail service.
+					France has an excellent transportation network, making it easy to move between cities and
+					regions. High-speed TGV trains connect major hubs quickly and comfortably, while regional trains and
+					buses reach smaller towns. In cities, public transit is reliable, Paris offers an extensive metro,
+					RER, buses, and trams. For rural areas like Provence or the Loire Valley, renting a car gives the
+					most flexibility. Domestic flights are available but often unnecessary thanks to efficient rail
+					service.
 				</p>
 				<h2>Safety</h2>
 				<p>
-					France is generally safe for travelers. Petty theft, especially in crowded areas, train stations,
-					and major attractions—can happen, so keep valuables secure and stay aware of your surroundings. At
-					night, well-lit central areas are safe to navigate, though it’s wise to avoid isolated spots. Follow
-					local guidance during demonstrations or strikes, which occur occasionally and may affect transport
-					schedules.
+					France is generally safe for travelers. Petty theft, especially in crowded areas, train
+					stations, and major attractions—can happen, so keep valuables secure and stay aware of your
+					surroundings. At night, well-lit central areas are safe to navigate, though it’s wise to avoid
+					isolated spots. Follow local guidance during demonstrations or strikes, which occur occasionally and
+					may affect transport schedules.
 				</p>
 			</div>
 		</div>
