France SVG embedded

--- a/countries/france.html
+++ b/countries/france.html
@@ -14,9 +14,13 @@
 	<div class="grid-div">
 		<div></div>
 		<div class="main-div-outer">
-			<div class="main-div-inner">
-				<img src="../img/flag_of_france.svg" class="flag" />
-				<audio controls>
+			<article class="main-div-inner">
+				<svg class="flag" alt="Flag of France" xmlns="http://www.w3.org/2000/svg" width="15rem" height="10rem">
+					<rect width="15rem" height="10rem" fill="#CE1126" />
+					<rect width="10rem" height="10rem" fill="#FFFFFF" />
+					<rect width="5rem" height="10rem" fill="#002654" />
+				</svg>
+				<audio aria-label="La Marseillaise, the National Anthem of France" controls>
 					<source src="../audio/La_Marseillaise.ogg"> Your browser does not support the audio element.
 				</audio>
 				<h1>Summary</h1>
@@ -30,7 +34,7 @@
 					spoken in tourist areas. The best time to visit is during
 					summer/autumn when the weather is pleasant with fewer crowds.
 				</p>
-				<img src="../img/france_political_map.webp" class="large-image">
+				<img src="../img/france_political_map.webp" class="large-image" alt="Map of France">
 				<h1>Getting around</h1>
 				<h2>Transport</h2>
 				<p>
@@ -49,34 +53,35 @@
 					isolated spots. Follow local guidance during demonstrations or strikes, which occur occasionally and
 					may affect transport schedules.
 				</p>
-			</div>
+			</article>
 		</div>
 		<div class="main-div-outer">
-			<div class="main-div-inner">
+			<article class="main-div-inner">
 				<h1>Top 5 Things to Do</h1>
 				<ol>
 					<li>
 						<p class="list-text">Explore Paris - The City of Light</p>
-						<img src="../img/france_paris.webp" class="list-image">
+						<img src="../img/france_paris.webp" class="list-image" alt="Image of Paris">
 					</li>
 					<li>
 						<p class="list-text">Visit the French Riviera (Côte d'Azur)</p>
-						<img src="../img/france_riviera.webp" class="list-image">
+						<img src="../img/france_riviera.webp" class="list-image" alt="Image of the French Riviera">
 					</li>
 					<li>
 						<p class="list-text">Discover the Loire Valley Châteaux</p>
-						<img src="../img/france_loire.webp" class="list-image">
+						<img src="../img/france_loire.webp" class="list-image"
+							alt="Image of a Châteaux of the Loire Valley">
 					</li>
 					<li>
 						<p class="list-text">Tour the Wine Regions</p>
-						<img src="../img/france_wine.webp" class="list-image">
+						<img src="../img/france_wine.webp" class="list-image" alt="Image of the Wine Regions">
 					</li>
 					<li>
 						<p class="list-text">Experience Provence</p>
-						<img src="../img/france_provence.webp" class="list-image">
+						<img src="../img/france_provence.webp" class="list-image" alt="Image of Provence">
 					</li>
 				</ol>
-			</div>
+			</article>
 			<div></div>
 		</div>
 	</div>
