--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
           <h3>France</h3>
         </div>
         <div class="carousel-item">
-          <img src="./SVGs/italy 2.svg" alt="Italy" />
+          <img src="./SVGs/Italy 2.svg" alt="Italy" />
           <h3>Italy</h3>
         </div>
         <div class="carousel-item main-item">
-          <img src="./SVGs/spainSvg.svg" alt="Spain" />
+          <img src="./SVGs/spain 2.svg" alt="Spain" />
           <h3>Spain</h3>
         </div>
         <div class="carousel-item">
-          <img src="./SVGs/portugalSvg.svg" alt="Portugal" />
+          <img src="./SVGs/Portugal 2.svg" alt="Portugal" />
           <h3>Portugal</h3>
         </div>
         <div class="carousel-item">
@@ -86,4 +86,5 @@
     <script src="./js/script.js"></script>
   </body>
 </html>
+
 
