Background Colors for images and moved their location

--- a/countries/france.html
+++ b/countries/france.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-	<div style="background-image: url(../img/france_background.webp);" class="background-div"></div>
+	<div style="background-image: url(../img/france/background.webp); background-color: #60818e;"
+		class="background-div"></div>
 	<div class="grid-div">
 		<div></div>
 		<div class="main-div-outer">
 			<article class="main-div-inner">
-				<svg class="flag" alt="Flag of France" xmlns="http://www.w3.org/2000/svg" width="15rem" height="10rem">
+				<svg class="flag" aria-label="Flag of France" xmlns="http://www.w3.org/2000/svg" width="15rem"
+					height="10rem">
 					<rect width="15rem" height="10rem" fill="#CE1126" />
 					<rect width="10rem" height="10rem" fill="#FFFFFF" />
 					<rect width="5rem" height="10rem" fill="#002654" />
@@ -34,7 +36,8 @@
 					spoken in tourist areas. The best time to visit is during
 					summer/autumn when the weather is pleasant with fewer crowds.
 				</p>
-				<img src="../img/france_political_map.webp" class="large-image" alt="Map of France">
+				<img src="../img/france/map.webp" style="background-color: #cad5ca;" width="600px" height="583px"
+					class="large-image" alt="Map of France">
 				<h1>Getting around</h1>
 				<h2>Transport</h2>
 				<p>
@@ -61,24 +64,28 @@
 				<ol>
 					<li>
 						<p class="list-text">Explore Paris - The City of Light</p>
-						<img src="../img/france_paris.webp" class="list-image" alt="Image of Paris">
+						<img src="../img/france/paris.webp" style="background-color: #e8f0e4;" class="list-image"
+							alt="Image of Paris">
 					</li>
 					<li>
 						<p class="list-text">Visit the French Riviera (Côte d'Azur)</p>
-						<img src="../img/france_riviera.webp" class="list-image" alt="Image of the French Riviera">
+						<img src="../img/france/riviera.webp" style="background-color: #0272b5;" class="list-image"
+							alt="Image of the French Riviera">
 					</li>
 					<li>
 						<p class="list-text">Discover the Loire Valley Châteaux</p>
-						<img src="../img/france_loire.webp" class="list-image"
+						<img src="../img/france/loire_valley.webp" style="background-color: #87937d;" class="list-image"
 							alt="Image of a Châteaux of the Loire Valley">
 					</li>
 					<li>
 						<p class="list-text">Tour the Wine Regions</p>
-						<img src="../img/france_wine.webp" class="list-image" alt="Image of the Wine Regions">
+						<img src="../img/france/wine_regions.webp" style="background-color: #a3b133;" class="list-image"
+							alt="Image of the Wine Regions">
 					</li>
 					<li>
 						<p class="list-text">Experience Provence</p>
-						<img src="../img/france_provence.webp" class="list-image" alt="Image of Provence">
+						<img src="../img/france/provence.webp" style="background-color: #6c6479;" class="list-image"
+							alt="Image of Provence">
 					</li>
 				</ol>
 			</article>
