--- a/countries/france.html
+++ b/countries/france.html
@@ -7,11 +7,31 @@
 	<title>France</title>
 	<script src="../js/keep-params.js"></script>
 	<link rel="stylesheet" href="../css/countries.css" />
+	<link rel="stylesheet" href="../css/shared.css" />
 </head>
 
 <body>
 	<div style="background-image: url(../img/france/background.webp); background-color: #60818e;"
 		class="background-div"></div>
+	<header>
+		<div class="name-h">
+			<h1>ROAM EU</h1>
+		</div>
+		<div class="nav-bar">
+			<a href="../index.html">Home</a>
+			<a href="../index.html">About</a>
+			<a class="drop-down"
+				onclick="document.getElementById('country-list').classList.toggle('show')">Countries</a>
+			<ul id="country-list" class="dropdown-menu">
+				<li>France</li>
+				<li>Italy</li>
+				<li>Spain</li>
+				<li>Portugal</li>
+				<li>Germany</li>
+			</ul>
+			<a href="../index.html">Contact</a>
+		</div>
+	</header>
 	<div class="grid-div">
 		<div></div>
 		<div class="main-div-outer">
