--- a/countries/france.html
+++ b/countries/france.html
@@ -23,13 +23,13 @@
 			<a class="drop-down"
 				onclick="document.getElementById('country-list').classList.toggle('show')">Countries</a>
 			<ul id="country-list" class="dropdown-menu">
-				<li>France</li>
-				<li>Italy</li>
-				<li>Spain</li>
-				<li>Portugal</li>
-				<li>Germany</li>
+				<li><a href="../countries/france.html">France</a></li>
+				<li><a href="../countries/italy.html">Italy</a></li>
+				<li><a href="../countries/spain.html">Spain</a></li>
+				<li><a href="../countries/portugal.html">Portugal</a></li>
+				<li><a href="../countries/germany.html">Germany</a></li>
 			</ul>
-			<a href="../index.html">Contact</a>
+			<a href="../contact.html">Contact</a>
 		</div>
 	</header>
 	<div class="grid-div">
