added few semantics and linked the navbar (changed greece to germany)

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>ROAMEU/Home</title>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <div class="name-h">
         <h1>ROAM EU</h1>
       </div>
-      <div class="nav-bar">
+      <nav class="nav-bar">
         <a href="#">Home</a>
         <a href="#about">About</a>
         <a class="drop-down">Countries</a>
         <ul class="dropdown-menu">
-          <li>France</li>
-          <li>Italy</li>
-          <li>Spain</li>
-          <li>Portugal</li>
-          <li>Germany</li>
+          <li><a href="./countries/france.html">FRANCE</a></li>
+            <li><a href="./countries/italy.html">ITALY</a></li>
+            <li><a href="./countries/spain.html">SPAIN</a></li>
+           <li><a href="./countries/portugal.html">PORTUGAL</a></li>
+            <li><a href="./countries/Germany.html"></a></li>
         </ul>
         <a href="contact.html">Contact</a>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div class="top-section">
       <div class="intro-text">
         <h2>Welcome to ROAM EU</h2>
