--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="./countries/italy.html">ITALY</a></li>
             <li><a href="./countries/spain.html">SPAIN</a></li>
            <li><a href="./countries/portugal.html">PORTUGAL</a></li>
-            <li><a href="./countries/Germany.html"></a></li>
+            <li><a href="./countries/Germany.html">Germany</a></li>
         </ul>
         <a href="contact.html">Contact</a>
       </nav>
@@ -52,35 +52,50 @@
     </div>
     <div class="countries-section">
       <h2>Choose Your Destination</h2>
-      <div class="carousel">
-        <div class="carousel-item">
-          <img src="./SVGs/France 2.svg" alt="France" />
+      <div class="container">
+        <div class="item">
+          <img src="./img/premium_photo-1719430569503-338fc89eb21f.avif" alt="France" />
           <h3>France</h3>
         </div>
-        <div class="carousel-item">
+        <div class="item">
           <img src="./SVGs/Italy 2.svg" alt="Italy" />
           <h3>Italy</h3>
         </div>
-        <div class="carousel-item main-item">
+        <div class="item">
           <img src="./SVGs/spain 2.svg" alt="Spain" />
           <h3>Spain</h3>
         </div>
-        <div class="carousel-item">
+        <div class="item">
           <img src="./SVGs/Portugal 2.svg" alt="Portugal" />
           <h3>Portugal</h3>
         </div>
-        <div class="carousel-item">
+        <div class="item">
           <img src="./SVGs/germanSvg.svg" alt="Greece" />
           <h3>Germany</h3>
         </div>
       </div>
     </div>
     <footer>
-      <p>&copy; 2025 ROAM EU. All rights reserved.</p>
-      <div class="links">
-        <a href="#privacy">Privacy Policy</a> |
-        <a href="#terms">Terms of Service</a> |
-        <a href="contact.html">Contact Us</a>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>About ROAM EU</h3>
+          <p>Explore the rich culture, history, and beauty of Europe with us.</p>
+        </div>
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <a href="#about">About</a>
+          <p></p>
+          <a href="contact.html">Contact Us</a>
+        </div>
+        <div class="footer-section">
+          <h3>Legal</h3>
+          <a href="#privacy">Privacy Policy</a>
+          <p></p>
+          <a href="#terms">Terms of Service</a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 ROAM EU. All rights reserved.</p>
       </div>
     </footer>
     <script src="./js/script.js"></script>
