--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us</title>
     <!-- link to css file -->
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
   </head>
   <body>
     <!-- main title and text under it  -->
