--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character encoding for proper text display across all browsers -->
     <meta charset="UTF-8" />
+    <!-- Viewport settings to ensure responsive design works properly on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Link to our main stylesheet that controls the visual appearance of all elements -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Page title that appears in the browser tab -->
     <title>ROAMEU/Home</title>
   </head>
   <body>
+    <!-- Header section: Contains the site logo and main navigation menu -->
     <header class="header">
+      <!-- Logo/Brand name for ROAM EU -->
       <div class="name-h">
         <h1>ROAM EU</h1>
       </div>
+      <!-- Main navigation bar with links to different sections of the website -->
       <nav class="nav-bar">
+        <!-- Home link -->
         <a href="#">Home</a>
+        <!-- About section link -->
         <a href="#about">About</a>
+        <!-- Dropdown menu trigger for country selection -->
         <a class="drop-down">Countries</a>
+        <!-- Dropdown menu containing list of European countries -->
         <ul class="dropdown-menu">
           <li><a href="./countries/france.html">FRANCE</a></li>
             <li><a href="./countries/italy.html">ITALY</a></li>
@@ -22,16 +33,23 @@
            <li><a href="./countries/portugal.html">PORTUGAL</a></li>
             <li><a href="./countries/Germany.html">Germany</a></li>
         </ul>
+        <!-- Contact page link -->
         <a href="contact.html">Contact</a>
       </nav>
     </header>
+
+    <!-- Hero/Welcome section: Features the main welcome message and a featured image -->
     <div class="top-section">
+      <!-- Welcome text content on the left side -->
       <div class="intro-text">
         <h2>Welcome to ROAM EU</h2>
         <p>Your gateway to exploring Europe</p>
       </div>
+      <!-- Featured travel image on the right side -->
       <img src="img/top_section.webp" alt="Travel in Europe" />
     </div>
+
+    <!-- About Us section: Provides information about ROAM EU and our services -->
     <div class="about-section" id="about">
       <h2>About Us</h2>
       <p>
@@ -50,43 +68,57 @@
         EU. Let us guide you on your next great adventure.
       </p>
     </div>
+
+    <!-- Destination showcase section: Displays all featured countries with images -->
     <div class="countries-section">
       <h2>Choose Your Destination</h2>
+      <!-- Container for country cards that displays them in a horizontal scrollable layout on desktop -->
       <div class="container">
-        <div class="item">
+        <!-- France destination card -->
+        <a class="item">
           <img src="./img/premium_photo-1719430569503-338fc89eb21f.avif" alt="France" />
           <h3>France</h3>
-        </div>
-        <div class="item">
-          <img src="./SVGs/Italy 2.svg" alt="Italy" />
+        </a>
+        <!-- Italy destination card -->
+        <a class="item">
+          <img src="./img/spencer-davis-ckotRXopwRM-unsplash.jpg" alt="Italy" />
           <h3>Italy</h3>
-        </div>
-        <div class="item">
-          <img src="./SVGs/spain 2.svg" alt="Spain" />
+        </a>
+        <!-- Spain destination card -->
+        <a class="item">
+          <img src="./img/robin-ulrich-Dnfl3fIjjtk-unsplash.jpg" alt="Spain" />
           <h3>Spain</h3>
-        </div>
-        <div class="item">
-          <img src="./SVGs/Portugal 2.svg" alt="Portugal" />
+        </a>
+        <!-- Portugal destination card -->
+        <a class="item">
+          <img src="./img/ekaterina-boltaga-jqkGK3ofxi8-unsplash.jpg" alt="Portugal" />
           <h3>Portugal</h3>
-        </div>
-        <div class="item">
-          <img src="./SVGs/germanSvg.svg" alt="Greece" />
+        </a>
+        <!-- Germany destination card -->
+        <a class="item">
+          <img src="./img/julia-solonina-5NnK3nJ44g8-unsplash.jpg" alt="Greece" />
           <h3>Germany</h3>
-        </div>
+        </a>
       </div>
     </div>
+
+    <!-- Footer section: Contains company information, links, and copyright notice -->
     <footer>
+      <!-- Main footer content divided into three sections -->
       <div class="footer-content">
+        <!-- About section in footer: Brief company description -->
         <div class="footer-section">
           <h3>About ROAM EU</h3>
           <p>Explore the rich culture, history, and beauty of Europe with us.</p>
         </div>
+        <!-- Quick links section in footer: Important navigation links -->
         <div class="footer-section">
           <h3>Quick Links</h3>
           <a href="#about">About</a>
           <p></p>
           <a href="contact.html">Contact Us</a>
         </div>
+        <!-- Legal section in footer: Privacy and terms links -->
         <div class="footer-section">
           <h3>Legal</h3>
           <a href="#privacy">Privacy Policy</a>
@@ -94,12 +126,13 @@
           <a href="#terms">Terms of Service</a>
         </div>
       </div>
+      <!-- Copyright notice at the bottom of the footer -->
       <div class="footer-bottom">
         <p>&copy; 2025 ROAM EU. All rights reserved.</p>
       </div>
     </footer>
+
+    <!-- JavaScript file for interactive features like dropdown menu functionality -->
     <script src="./js/script.js"></script>
   </body>
 </html>
-
-
